--- a/metadata.yaml
+++ b/metadata.yaml
@@ -8,6 +8,9 @@ contributor:
     deathdate: 1957
     gutenberg_agent_id: '5821'
     url: http://www.gutenberg.org/2009/agents/5821
+covers:
+- cover_type: archival
+  image_path: 72796-h/images/cover.jpg
 creator:
   author:
     agent_name: Collins, A. Frederick (Archie Frederick)
@@ -18,6 +21,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/2266
     wikipedia: https://en.wikipedia.org/wiki/Archie_Frederick_Collins
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/72796#Jack-Heaton-wireless-operator
 gutenberg_issued: '2024-01-26'
 gutenberg_type: Text
 identifiers:
